--- a/index2.html
+++ b/index2.html
@@ -34,9 +34,9 @@
   <div class="card" style="width: 18rem;">
     <img src="/imagenes/gato.jfif" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <h5 class="card-title">Gatos</h5>
+      <p class="card-text">Como podemos ver en esa imagen, los gatos son próximos a dominar el mundo.</p>
+      <a href="#" class="btn btn-primary">Mas información, aquí...</a>
     </div>
   </div>
 
