--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index 2 </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  </head>
 </head>
 
 <button style="background-color:blue; border-color: black; color: azure;" type="button" class="btn btn-primary">Ubicación</button>
@@ -14,8 +16,8 @@
     Datos del alumno
 </h1>
 
-<label style="position: relative;left: 800px; top: -110px;" for="exampleColorInput" class="form-label">Color picker</label>
-<input style="position: relative;left: 820px; top: -105px;" type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c" title="Choose your color">
+<label style="position: relative;left: 800px; top: -90px;" for="exampleColorInput" class="form-label">Color picker</label>
+<input style="position: relative;left: 820px; top: -80px;" type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c" title="Choose your color">
 
 <div style="position: relative;left: 440px;" class="mb-1">
     <label for="ejemploNombre" class="form-label">Nombre   </label>
