--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
 </head>
-
+<body>
 <button style="background-color:blue; border-color: black; color: azure;" type="button" class="btn btn-primary">Ubicación</button>
 <button style="background-color: cornsilk;border-color: black;color: black;" type="button" class="btn btn-info">Clima</button>
 
@@ -42,5 +42,6 @@
       <a href="#" class="btn btn-primary">Mas información, aquí...</a>
     </div>
   </div>
-
-<body> 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+</body> 
+</html>
